--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ body {
 
 
 button {
-  border: 1px solid transparent;
+  border: none;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
